--- a/estilo.css
+++ b/estilo.css
@@ -4,16 +4,6 @@
   color: #fff;
 }
 
-ul {
-  list-style: none;
-  font-size: larger;
-}
-
-i{
-  text-decoration: none;
-  font-size: 40px;
-}
-
 body {
   background: url(./pexels-1.jpg) no-repeat center center fixed;
   background-size: cover;
@@ -22,7 +12,7 @@ body {
 header{
   background-color: #19012fe7;
   display: flex;
-  height: 100px;
+  height: 80px;
   justify-content:space-around;
   align-items: center;
   margin-bottom: 50px;
@@ -34,7 +24,7 @@ header{
 
 header .logo{
   background-color: #0c3647a1;
-  height: 30px;
+  height: 15px;
   border-radius: 0 15px 0 15px;
   align-items: center;
   padding: 20px;
@@ -49,6 +39,11 @@ header div{
 
 header ul{
   display: flex;
+  list-style: none;
+}
+
+header i{
+  font-size: 35px;
 }
 
 header ul li{
@@ -61,20 +56,20 @@ header ul li i:hover {
 
 .container{
   background-color: #111013bf;
-  height: 620px;
+  height: auto;
   width: 65%;
-  margin: auto;
-  padding: 5px;
+  margin: 0 auto;
+  padding: 50px;
   text-align: center;
 }
 
-.nome h1{
+.container .nome h1{
   color: #fff;
   font-size: 60px;
-  padding: 30px;
+  padding: 5px;
 }
 
-.nome h5{
+.container .nome h5{
   color: #fff;
   font-size: 30px;
 }
@@ -103,6 +98,10 @@ header ul li i:hover {
 
 #animation {
   transition: 100ms;
+}
+
+#arrow p{
+  font-size: 15px;
 }
 
 .rotate {
@@ -145,21 +144,3 @@ header ul li i:hover {
   background-color: #cc2c4983;
 }
 
-@media only screen and(max-width: 854px){
-  .form{
-    width: 75%;
-    }
-  }
-
-  @media only screen and(max-width: 480px){
-    .container .nome h1{
-      font-size: 30px;
-    }
-    .container .nome h5{
-      font-size: 15px;
-    }
-    #about p{
-      max-width: 80%;
-      text-align: justify;
-    }
-}
